--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 三叶草国际语
+title: Dream-Blog
 SEOTitle: 三叶草国际语 - 让沟通更容易
 header-img: img/post-bg-desk.jpg
 email: klovien@gmail.com
@@ -12,7 +12,7 @@ github_repo: "https://github.com/klovien/klovien.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you're going to be!"
-sidebar-avatar: /img/about-HJ.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-someone.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
