--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Dream-Blog
-SEOTitle: 三叶草国际语 - 让沟通更容易
+SEOTitle: 不秃程序员
 header-img: img/post-bg-desk.jpg
-email: klovien@gmail.com
-description: "中西融合, 即学即会, 从此不再辛苦背单词"
-keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
+email: 2678635299@qq.com
+description: "好好学技术，认真做码农"
+keyword: "JAVA,Spring,SpringBoot,数据库，redis,程序员，博客"
 url: "https://klovien.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/klovien/klovien.github.io.git" # you code repository
+github_repo: "https://github.com/sbFly-j/sbFly-j.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -98,14 +98,14 @@ service-worker: true
 
 # 友情链接，请尽量不要删除，谢谢！
 friends: [
-    {
-        title: "星球国际语",
-        href: "https://globien.gitee.io"
-    },{
-        title: "星球语互动社区",
-        href: "https://tieba.baidu.com/f?kw=%E6%A0%BC%E7%BD%97%E6%AF%94%E8%A8%80&fr=home"
-    },{
-        title: "知乎：人造国际语",
-        href: "https://zhuanlan.zhihu.com/Artificial-International-Language"
-    }
+#     {
+#         title: "星球国际语",
+#         href: "https://globien.gitee.io"
+#     },{
+#         title: "星球语互动社区",
+#         href: "https://tieba.baidu.com/f?kw=%E6%A0%BC%E7%BD%97%E6%AF%94%E8%A8%80&fr=home"
+#     },{
+#         title: "知乎：人造国际语",
+#         href: "https://zhuanlan.zhihu.com/Artificial-International-Language"
+#     }
 ]
